--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a id="featured-image" href="/images/image-product-1.jpg">
               <img 
                 alt="image product one" 
-                src="/images/image-product-1.jpg"/>
+                src="./images/image-product-1.jpg"/>
             </a>
             
             <!--other pictures-->
@@ -89,34 +89,34 @@
 
               <a 
                 class="small-pictures" 
-                href="/images/image-product-1.jpg" >
+                href="./images/image-product-1.jpg" >
                 <img 
                   alt="image product one" 
-                  src="/images/image-product-1-thumbnail.jpg"/>
+                  src="./images/image-product-1-thumbnail.jpg"/>
               </a>
 
               <a 
                 class="small-pictures" 
-                href="/images/image-product-2.jpg">
+                href="./images/image-product-2.jpg">
                 <img 
                   alt="image product two" 
-                  src="/images/image-product-2-thumbnail.jpg"/>
+                  src="./images/image-product-2-thumbnail.jpg"/>
               </a>
 
               <a 
                 class="small-pictures" 
-                href="/images/image-product-3.jpg">
+                href="./images/image-product-3.jpg">
                 <img 
                   alt="image product three" 
-                  src="/images/image-product-3-thumbnail.jpg"/>
+                  src="./images/image-product-3-thumbnail.jpg"/>
               </a>
 
               <a 
                 class="small-pictures" 
-                href="/images/image-product-4.jpg">
+                href="./images/image-product-4.jpg">
                 <img 
                   alt="image product four" 
-                  src="/images/image-product-4-thumbnail.jpg"/>
+                  src="./images/image-product-4-thumbnail.jpg"/>
               </a>
                         
             </div>
