--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
           <figure >  
             <!--featured image-->
-            <a id="featured-image" href="/images/image-product-1.jpg">
+            <a id="featured-image" href="./images/image-product-1.jpg">
               <img 
                 alt="image product one" 
                 src="./images/image-product-1.jpg"/>
@@ -166,7 +166,7 @@
             <div class="counter-box">
 
               <img 
-                src="/images/icon-minus.svg" 
+                src="./images/icon-minus.svg" 
                 alt="minus button" 
                 id="button-minus"/>
   
@@ -175,7 +175,7 @@
               </span>
   
               <img 
-                src="/images/icon-plus.svg" 
+                src="./images/icon-plus.svg" 
                 alt="plus button" 
                 id="button-plus">
   
@@ -184,7 +184,7 @@
             <div class="main-btn">
   
               <img 
-                src="/images/icon-white-cart.svg" 
+                src="./images/icon-white-cart.svg" 
                 alt="icon-cart" 
                 class="white-cart"
                 id="white-cart"/>
